hyperstack-macros/tests/ui/map_errors/malformed_map_attribute.stderr
error: Source path must be in format ModulePath::TypeName::field_name
 --> tests/ui/map_errors/malformed_map_attribute.rs:5:11
  |
5 |     #[map(source)]
  |           ^^^^^^
