hyperstack-macros/tests/ui/map_errors/malformed_map_attribute.rs
use hyperstack_macros::hyperstack;

#[hyperstack]
struct Broken {
    #[map(source)]
    value: u64,
}

fn main() {}
